# GL_Client_Server_Application_Qt_Task_2

./: README.md
Client_Client_Server_Application__Qt/: CMakeLists.txt  CMakeLists.txt.user.e4f1a38  client.cpp  client.h  main.cpp
Server_Client_Server_Application_Qt/: CMakeLists.txt  main.cpp  server.cpp  server.h
